fix: address SonarCloud issues in GenePanelServiceImpl
Rename non-constant fields to camelCase (S116) and use Stream.toList()
instead of collect(Collectors.toList()) (S6204).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>